feat: added anti cheat documentation

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,9 +7,9 @@ import { SITE_TITLE } from "../consts";
 	<nav>
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/docs">Docs</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/wiki">Home</HeaderLink>
+			<HeaderLink href="/wiki/docs">Docs</HeaderLink>
+			<HeaderLink href="/wiki/about">About</HeaderLink>
 		</div>
 		<div class="social-links">
 			<a href="https://github.com/FirelandsProject" target="_blank">
