--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>We are an Open Source and Modular Solution for MMO Games.</h1>
+			<h1>We are an Open Source and Modular Solution for MMO Games</h1>
 			<p>
 				This are our value added features:
 				<ul>
